Add `#/courses/info/{period}/{code}/teachers` endpoint
